@@ -1,7 +1,7 @@
 //
 // AtomicCounter.h
 //
-// $Id: //poco/1.4/Foundation/include/Poco/AtomicCounter.h#4 $
+// $Id: //poco/1.4/Foundation/include/Poco/AtomicCounter.h#6 $
 //
 // Library: Foundation
 // Package: Core
@@ -45,8 +45,12 @@
 #include "Poco/UnWindows.h"
 #elif POCO_OS == POCO_OS_MAC_OS_X
 #include <libkern/OSAtomic.h>
-#elif ((__GNUC__ == 4) && (__GNUC_MINOR__ >= 1) || __GNUC__ > 4) && (defined(__x86_64__) || defined(__i386__))
-#if !defined(POCO_HAVE_GCC_ATOMICS)
+#elif ((__GNUC__ == 4) && (__GNUC_MINOR__ >= 2) || __GNUC__ > 4) && (defined(__x86_64__) || defined(__i386__))
+#if !defined(POCO_HAVE_GCC_ATOMICS) && !defined(POCO_NO_GCC_ATOMICS)
+#define POCO_HAVE_GCC_ATOMICS
+#endif
+#elif ((__GNUC__ == 4) && (__GNUC_MINOR__ >= 3) || __GNUC__ > 4)
+#if !defined(POCO_HAVE_GCC_ATOMICS) && !defined(POCO_NO_GCC_ATOMICS)
 #define POCO_HAVE_GCC_ATOMICS
 #endif
 #else
