@@ -1,7 +1,7 @@
 //
 // MessageHeader.h
 //
-// $Id: //poco/1.4/Net/include/Poco/Net/MessageHeader.h#4 $
+// $Id: //poco/1.4/Net/include/Poco/Net/MessageHeader.h#5 $
 //
 // Library: Net
 // Package: Messages
@@ -122,6 +122,11 @@ public:
 		/// Specify 0 for unlimited (not recommended).
 		///
 		/// The default limit is 100.
+
+	bool hasToken(const std::string& fieldName, const std::string& token) const;
+		/// Returns true iff the field with the given fieldName contains
+		/// the given token. Tokens in a header field are expected to be
+		/// comma-separated and are case insensitive.
 		
 	static void splitElements(const std::string& s, std::vector<std::string>& elements, bool ignoreEmpty = true);
 		/// Splits the given string into separate elements. Elements are expected
